force-app/main/default/objects/Receipt_Invoice__c/Receipt_Invoice__c.object-meta.xml
<CustomObject>
    <label>Receipt Invoice</label>
    <nameField>
        <label>Receipt Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receipts Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>