force-app/main/default/objects/Receipt_Invoice__c/fields/Invoice_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Paid_Amount__c</fullName>
    <formula>Invoice__r.Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>