force-app/main/default/objects/Receipt_Invoice__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Receipt_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>