force-app/main/default/objects/Receipt_Invoice__c/fields/Receipt_Status__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Status__c</fullName>
    <formula>TEXT( Receipt__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt Status</label>
    <type>Text</type>
</CustomField>